--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon Site Web</title>
+    <title>Site de Leeroy</title>
 </head>
 <body>
     <header>
-        <h1>Mon Site Web</h1>
+        <h1>Bienvenue chez moi</h1>
         <nav>
             <ul>
                 <li><a href="https://Leeroy-Charbonnier.github.io/">Accueil</a></li>
