--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
                 <li>Service 3</li>
             </ul>
         </section>
+
+         <section>
+            <h2>Nos Réalisations</h2>
+            <img src="32-w1260.jpg" alt="Une image représentant nos réalisations">
+        </section>
     </main>
 
     <footer>
