--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </section>
 
          <section>
-            <h2>Guts pas contents tu des démons</h2>
+            <h2>Guts pas contents tue des démons</h2>
             <img src="32-w1260.jpg" alt="Une image représentant nos réalisations">
         </section>
     </main>
